--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Jakob Brounstein</h1>
+  <h2> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics. My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions  dealing with issues of social justice. Prior to my studies at Berkeley, I was living in New York City and Reims, France, where I was finshing my undergraduate studies.
+    /n I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h2>
