--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Jakob Brounstein</h1>
-  <h2> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics. My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions dealing with issues of social justice. Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I was finshed my undergraduate degrees. I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h2>
+  <h2> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics. My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions dealing with issues of social justice. Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finshed my undergraduate degrees. I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h2>
 <h3>You've entered my website time machine. Welcome to the year 1999, the year when this website looks like it was created.</h3>
 
 <h2>Contact:</h2> <h3>jakob.brounstein[at]berkeley.edu</h3>
