--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="photo.gif" alt=""><br>
+                <img class="img-responsive" src="brounstein_headshot.jpg" alt=""><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p><h1>Jakob Brounstein</h1>
-          <h2> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics. My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions dealing with issues of social justice. Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h2>
+          <h3> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics. My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions dealing with issues of social justice. Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h3>
         <h3>You've entered my website time machine. Welcome to the year 1999, the year when this website looks like it was created.</h3>
         <h2>Contact:</h2> <h3>jakob.brounstein[at]berkeley.edu</h3>
                 </div>
