--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="files/brounstein_headshot_square.jpg" alt=""><br>
+                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt=""><br>
                 
                 <div style="margin-top:3%; text-align:justify;">                
 					<p><h1>Jakob Brounstein</h1>
