--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
-              <li><a href="#">Research</a></li>
+              <li><a href="#research">Research</a></li>
               <li><a href="#teaching">Teaching</a></li> 
-              <li><a href="#">CV</a></li> 
+              <li><a href="#about">CV</a></li> 
               <li><a href="#misc">Miscellaneous</a></li> 
 		</ul>
 	  </div>
