--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
-              <li><a href="#research">Research</a></li>
-              <li><a href="#teaching">Teaching</a></li> 
-              <li><a href="#about">CV</a></li> 
-              <li><a href="#misc">Miscellaneous</a></li> 
+              <li><a href="research">Research</a></li>
+              <li><a href="teaching">Teaching</a></li> 
+              <li><a href="about">CV</a></li> 
+              <li><a href="misc">Miscellaneous</a></li> 
 		</ul>
 	  </div>
 	</nav>
