--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Jakob Brounstein</b></div><br>
                 <p><b>jakob.brounstein[at]berkeley.edu</b><br>
-                <p>PhD Candidate in Economics
+                <p>PhD Candidate in Economics<br>
 		Department of Economics<br>
                 University of California, Berkeley<br>
                 </p>
