--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- Main Image -->
                 <img class="img-responsive" src="files/brounstein_headshot_square.png" alt=""><br>
 		 <!--   <p> <font size="+1"> <sub> Photo by Henry Teng</font> </sub> </p> -->
-		    <p class="image-caption">{{ Photo by Henry Teng }}</p>
+		   <em>image_caption</em>
                 <div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
