--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="" <p class="image-caption">{{Photo by Henry Teng}}</p>><br>
-		 <!--   <p> <font size="+1"> <sub> Photo by Henry Teng</font> </sub> </p> -->
+                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" <figcaption>Photo by Henry Teng</figcaption> ><br>
                 <div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
