--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > <figcaption>Photo by Henry Teng</figcaption> <br>
-                <div style="margin-top:3%; text-align:justify;">                
+		<figure>
+                	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > <figcaption>Photo by Henry Teng</figcaption> <br>
+		</figure>
+		<div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
 					My research mainly deals with tax avoidance/evasion and inequality, but my broader interests extend to applying quantitative, social scientific methods to questions dealing with issues of social justice. <br/> 
