--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-		<figure>
+		<!-- <figure>
                 	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > <figcaption>Photo by Henry Teng</figcaption> <br>
 		</figure>
+		-->
+		<figure>
+		<img src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
+		    <figcaption>Dog</figcaption>
+		</figure> 
+		    
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
