--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		</figure>
 		-->
 		<figure>
-		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
-		    <figcaption>Dog</figcaption>
+		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"/>
+		    <figcaption>Dog</figcaption> <br>
 		</figure> 
 		    
 		<div style="margin-top:3%; text-align:justify;">                
