--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		</figure>
 		-->
 		<figure>
-		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"/>
-		    <figcaption>Dog</figcaption> <br>
-		</figure> 
+		  <img src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"/>
+		  <figcaption>This is my caption text.</figcaption>
+		</figure>    
 		    
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
