--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
             <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-		<figure>
-                	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > <figcaption>Photo by Henry Teng</figcaption> <br>
+		<!--
+                	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > 
+			<figcaption>Photo by Henry Teng</figcaption> <br>
+		-->
+		<figure class="image">
+  			<"img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
+			<figcaption>{{ include.description }}</figcaption>
 		</figure>
 		    
 		<div style="margin-top:3%; text-align:justify;">                
