--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > 
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
-		<figure class="image">
+		
   			<"img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
-			<figcaption>{{ include.description }}</figcaption>
-		</figure>
+			<figcaption>Photo by Henry Teng</figcaption>
+	
 		    
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
