--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
 		
-  			<"img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
+  			<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
 			<figcaption>Photo by Henry Teng</figcaption>
 	
 		    
