--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
 		
-  			<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><br>
-			<figcaption>Photo by Henry Teng</figcaption>
+  			<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" <figcaption>Photo by Henry Teng</figcaption>>
+			
 		    
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
