--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh;">
+            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;"">
                 
                 <!-- Main Image -->
 		<!--
                 	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > 
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
-		
-  			<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" <figcaption>Photo by Henry Teng</figcaption>>
-			
-		    
+			<div>
+  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" <figcaption>Photo by Henry Teng</figcaption>
+			</div>
+	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
