--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > 
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
-			<div>
-  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" <figcaption>Photo by Henry Teng</figcaption>
-			</div>
+
+  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="padding-bottom:0.5em;"/>Photo by Henry Teng
+
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
