--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<figcaption>Photo by Henry Teng</figcaption> <br>
 		-->
 
-  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="padding-bottom:0.5em;"/>Photo by Henry Teng
+  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="padding-bottom:0.5em;"/> hoto by Henry Teng
 
 	
 		<div style="margin-top:3%; text-align:justify;">                
