--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
             <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;"">
                 
                 <!-- Main Image -->
-		<!--
-                	<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" > 
-			<figcaption>Photo by Henry Teng</figcaption> <br>
-		-->
 
-  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="padding-bottom:-2em;"/><figcaption> Photo by Henry Teng </figcaption> 
+  				<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"/><figcaption> Photo by Henry Teng </figcaption> 
 
 	
 		<div style="margin-top:3%; text-align:justify;">                
