--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;"">
+            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center; display: block"">
                 
                 <!-- Main Image -->
 
