--- a/index.html
+++ b/index.html
@@ -39,14 +39,8 @@
             <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center; display: block; vertical-align: middle;">
                 
                 <!-- Main Image -->
-		img {
-		  vertical-align: middle;
-		}
-		figcaption {
-		  background-color: hsla(0, 0%, 0%, .5);
-		}
-		    
-  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"/><figcaption> Photo by HenryTeng </figcaption> 
+		
+  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="display:block"/><figcaption> Photo by Henry Teng </figcaption> 
 
 	
 		<div style="margin-top:3%; text-align:justify;">                
