--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center; display: block; vertical-align: middle;">
+            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center; >
                 
                 <!-- Main Image -->
 		
-  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="display:block"/><figcaption> Photo by Henry Teng </figcaption> 
+  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style=display:block/><figcaption> Photo by enry Teng </figcaption> 
 
 	
 		<div style="margin-top:3%; text-align:justify;">                
