--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                 <!-- Main Image -->
 		
-  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style=display:block/><figcaption> Photo by enry Teng </figcaption> 
+  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" style="display:block" /><figcaption> Photo by Henry Teng </figcaption> 
 
 	
 		<div style="margin-top:3%; text-align:justify;">                
