--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;>
                 
                 <!-- Main Image -->
-		
-  		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"/><figcaption> Photo by Henry Teng </figcaption> 
-
+		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"><figcaption> Photo by Henry Teng </figcaption> 
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
