--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;>
+            <!-- <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;> -->
+            <div class="col-md-8" style="height: 100vh;">
                 
                 <!-- Main Image -->
-		<img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"><figcaption>Photo by Henry Ten</figcaption> 
+                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><br>
+                    
+                <!-- Main Image -->
+	<!--	<img class="img-responsive" align="absbottom"><figcaption>Photo by Henry Ten</figcaption>  -->
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
