--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
             <!-- Entries Column -->
             <!-- <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;> -->
-            <div class="col-md-8" style="height: 100vh;  text-align:center; line-height:10px"; font-size:80%">
+            <div class="col-md-8" style="height: 100vh;  text-align:center; line-height:10px; font-size:80%">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"><figcaption> hoto by Henry Teng</figcaption><br>
+                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom" style="display:block"><figcaption> Photo by Henry Teng</figcaption><br>
                     
                 <!-- Main Image -->
 	<!--	<img class="img-responsive" align="absbottom"><figcaption>Photo by Henry Ten</figcaption>  -->
