--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-md-8" style="height: 100vh;  text-align:center; line-height:10px; font-size:80%">
                 
                 <!-- Main Image -->
-                <img class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom" style="display:block"><figcaption> Photo by Henry Teng</figcaption><br>
+                <img style="display:block" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"><figcaption> Photo by Henry Teng</figcaption><br>
                     
                 <!-- Main Image -->
 	<!--	<img class="img-responsive" align="absbottom"><figcaption>Photo by Henry Ten</figcaption>  -->
