--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!-- Entries Column -->
             <!-- <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;> -->
-            <div class="col-md-8" style="height: 100vh;  text-align:center; line-height:10px; font-size:80%">
+            <div class="col-md-8" style="text-align:center; line-height:10px; font-size:80%">
                 
                 <!-- Main Image -->
                 <img style="display:block" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot" align="absbottom"><p>Hoto by henrey Teng<br>
