--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+<style>
+    .col-md-8{
+        width: 125px;
+        border: 4px solid #333;
+    }
+    .col-md-8 img{
+        display: block;
+    }
+</style>
 </head>
 <body>
 
@@ -40,7 +49,7 @@
             <div class="col-md-8" style="text-align:center; line-height:0px; font-size:80%; display:block;">
                 
                 <!-- Main Image -->
-                <img style="display:block;" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><p>Photoby Henry Teng<br>
+                <img style="display:block;" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><p>Photo by Henry Teng<br>
                     
                 <!-- Main Image -->
 	<!--	<img class="img-responsive" align="absbottom"><figcaption>Photo by Henry Ten</figcaption>  -->
