--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
             <!-- Entries Column -->
             <!-- <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;> -->
-            <div class="col-md-8" style="text-align:center; line-height:0px; font-size:80%; display:block;">
+            <div class="col-md-8" style="height: 100vh; text-align:center; line-height:10px; font-size:80%; display:block;">
                 
                 <!-- Main Image -->
-                <img style="display:block;" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo b Henry Teng</figcaption><br>
+                <img style="display:block;" class="img-responsive" src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo by Henry Teng</figcaption><br>
                     
                 <!-- Main Image -->
 	<!--	<img class="img-responsive" align="absbottom"><figcaption>Photo by Henry Ten</figcaption>  -->
