--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-md-8" style="height: 1000vh; line-height:10px; font-size:80%; display:block;">
                 
                 <!-- Main Image -->
-                <img style="display:block;height: 60vh;" class="img-responsive; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo by Henry Teng</figcaption><br>
+                <img style="display:block; height: 60vh;" class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo by Henry Teng</figcaption><br>
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
