--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
 <head>
-  <title>Jakob A. Brounstein</title>
+  <title>Jakob Brounstein</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -54,7 +54,7 @@
            
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Jakob Brounstein</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Jakob A. Brounstein</b></div><br>
                 <p><b>jakob.brounstein[at]berkeley.edu</b><br>
                 <p>PhD Candidate in Economics<br>
 		Department of Economics<br>
