--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
 					My research mainly deals with tax avoidance/evasion and inequality, but my interests also extend to applying quantitative, social scientific methods to questions dealing with issues of social justice more broadly. <br/> 
-					  <br>
-					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h4>
-			</p>
+					<br>
+					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. <br/>
+			   		<br>
+					I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h4>		
+					</p>
+				
 		</div> 
 	</div> 	    
            
