--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 					<br>
 					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. <br/>
 			   		<br>
-					I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)</h4>		
-					</p>
+					I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)
+				</h4>		
+			</p>
 				
 		</div> 
 	</div> 	    
