--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 		<ul class="nav navbar-nav">
               <li><a href="/">Home</a></li>
               <li><a href="research">Research</a></li>
-              <li><a href="teaching">Teaching</a></li> 
-              <li><a href="about">CV</a></li> 
+              <li><a href="teaching">Teaching</a></li>  
               <li><a href="misc">Miscellaneous</a></li> 
 		</ul>
 	  </div>
@@ -71,6 +70,9 @@
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
               <dd><a href="https://twitter.com/jakobbrounstein">Twitter</a></dd>
+		<br>
+		  <dd><a href="/files/brounstein_cv_august2020.pdf">CV</a></dd>
+		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
             
