--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
-              <dd><a href="https://twitter.com/jakobbrounstein">Twitter</a></dd>
+                <dd><a href="https://twitter.com/jakobbrounstein">Twitter</a></dd>
 		<br>
-		  <dd><a href="/files/brounstein_cv_august2020.pdf">CV</a></dd>
+		<dd><a href="/files/brounstein_cv_august2020.pdf">CV (updated fall 2020)</a></dd>
 		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
