--- a/index.html
+++ b/index.html
@@ -76,7 +76,22 @@
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
             
-            
+                <!-- Publications -->
+	
+			<div class="col-md-8" style="height: 100vh;">    
+			<h2 id="research">Research</h2>
+
+			<strong>Peer-reviewed</strong><br/>
+			<ul>
+			<li class="paper" words="add, your, keywords, here"><a href="#">Full title</a> Names of the authors</li>
+			</ul>
+
+			<strong>Technical Reports</strong><br/>
+			<ul>
+			<li class="paper" words="add, your, keywords, here"><a href="#">Full title</a>. Details of the report</li>
+			</ul>
+		    </div>
+
 		    <!-- Publications -->
 	<!--
 			<div class="col-md-8" style="height: 100vh;">    
