--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="research">Research</a></li>
+              <li><a style="color:#e01709" href="index.html">Home</a></li>
+              <li><a href="research.html">Research</a></li>
               <li><a href="teaching">Teaching</a></li>  
               <li><a href="misc">Miscellaneous</a></li> 
 		</ul>
@@ -44,11 +44,11 @@
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
-					My research mainly deals with tax avoidance/evasion and inequality, but my interests also extend to applying quantitative, social scientific methods to questions dealing with issues of social justice more broadly. <br/> 
+					My research mainly deals with tax avoidance/evasion and inequality, but my interests extend more broadly to applying quantitative and social scientific methods to questions dealing with issues of social justice. <br/> 
 					<br>
 					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. <br/>
 			   		<br>
-					I will be available for interviews at the 2023 ASSA meetings in New Orleans ;)
+					I will be available for interviews at the 2022-2023 ASSA meetings in New Orleans.
 				</h4>		
 			</p>
 				
@@ -79,7 +79,8 @@
                 <!-- Publications -->
 	
 			<div class="col-md-8" style="height: 100vh;">    
-			<h2 id="research">Research</h2>
+			<h2 id="
+				rch">Research</h2>
 
 			<strong>Peer-reviewed</strong><br/>
 			<ul>
