--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li><a style="color:#e01709" href="index.html">Home</a></li>
               <li><a href="research.html">Research</a></li>
               <li><a href="teaching">Teaching</a></li>  
-              <li><a href="misc">Miscellaneous</a></li> 
+              <li><a href="misc">Non-econ miscellanea</a></li> 
 		</ul>
 	  </div>
 	</nav>
@@ -75,23 +75,7 @@
 		 
               <!-- <dd><a href="#">LinkedIn</a></dd> -->
             </div>
-            
-                <!-- Publications -->
-	
-			<div class="col-md-8" style="height: 100vh;">    
-			<h2 id="
-				rch">Research</h2>
-
-			<strong>Peer-reviewed</strong><br/>
-			<ul>
-			<li class="paper" words="add, your, keywords, here"><a href="#">Full title</a> Names of the authors</li>
-			</ul>
-
-			<strong>Technical Reports</strong><br/>
-			<ul>
-			<li class="paper" words="add, your, keywords, here"><a href="#">Full title</a>. Details of the report</li>
-			</ul>
-		    </div>
+          
 
 		    <!-- Publications -->
 	<!--
