--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a style="color:#e01709" href="research.html">Research</a></li>
                 <li><a href="teaching">Teaching</a></li>  
-                <li><a href="misc">Miscellaneous</a></li> 
+                <li><a href="misc">Non-econ miscellanea</a></li> 
             </ul>
         </div>
     </nav>
