--- a/misc.html
+++ b/misc.html
@@ -56,7 +56,7 @@
                 <strong>In the classical idiom</strong><br/>
                 <ul>
                 <li class="paper">
-                    Menuet pour un pauvre enfant térrible. 2020. [<a href="/files/music/menuet_pour_un_enfant_terrible_brounstein_final.pdf" target="_blank">Sheet music</a>]
+                    Menuet pour un pauvre enfant terrible. 2020. [<a href="/files/music/menuet_pour_un_enfant_terrible_brounstein_final.pdf" target="_blank">Sheet music</a>]
                 </li>
                 </ul>
 		    
