--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
 
             <!-- Publications -->
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
-                <h2 id="publications">Publications</h2>
+                <h2 id="research">Research</h2>
             
                 <strong>Economics journal articles</strong><br/>
                 <ul>
