--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a style="color:#e01709" href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="research.html">Research</a></li>
-              <li><a href="teaching">Teaching</a></li>  
+              <li><a style="color:#e01709" href="teaching.html">Teaching</a></li>
               <li><a href="misc.html">Non-econ miscellanea</a></li> 
 		</ul>
 	  </div>
