--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a style="color:#e01709" href="research.html">Research</a></li>
-                <li><a href="teaching">Teaching</a></li>  
+                <li><a href="teaching.html">Teaching</a></li>  
                 <li><a href="misc">Non-econ miscellanea</a></li> 
             </ul>
         </div>
