--- a/teaching.html
+++ b/teaching.html
@@ -23,8 +23,8 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a style="color:#e01709" href="research.html">Research</a></li>
-                <li><a href="teaching">Teaching</a></li>  
+                <li><a href="research.html">Research</a></li>
+                <li><a style="color:#e01709" href="teaching">Teaching</a></li>  
                 <li><a href="misc">Non-econ miscellanea</a></li> 
             </ul>
         </div>
