--- a/teaching.html
+++ b/teaching.html
@@ -40,9 +40,9 @@
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
                 <h2 id="teaching">Teaching</h2>
             <p>
-                    <h4>
-			    Ahoy! I'll be populating this space with materials for Econ 133: Global Inequality and Growth. 
-		    </h4>	    
+                    <h5>
+			    Ahoy! I'll be populating this space with materials for Econ 133: Global Inequality and Growth for the spring 2022 semester. See you there!
+		    </h5>	    
              
 	    </p>
               
