--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
               <strong>Works-in-progress</strong><br/>
                 <ul>
                 <li class="paper" words="Pink tax, Gender inequality, Gender wage gap">
-                    Barnes, K., <strong>Brounstein, J.</strong> The Pink Tax: large Gender Inequalities in Consumption and the Real Wage Gap
+                    Barnes, K., <strong>Brounstein, J.</strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap
                 </li>
 		<br>	
                 <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
