--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
                 
                 <!-- Main Image -->
-                <img align="middle"; style="display:block; height: 65%; width: 65%"; class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo by Henry Teng</figcaption><br>
+                <img align="middle"; style="display:block; height: 65%; width: 65%; text-align:center"; class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot"><figcaption>Photo by Henry Teng</figcaption><br>
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
