--- a/misc.html
+++ b/misc.html
@@ -87,7 +87,7 @@
     <!-- /.container -->
 
     <!-- Other people may like it too! -->
-    <a style="color:#868d96;font-size:0.9em; float:right;" href="https://github.com/mavroudisv/plain-academic" target="_blank">Design courtesy of Vasilios Mavroudis: Plain Academic &emsp;</a><br>
+    <a style="color:#868d96;font-size:0.9em; float:right;" href="https://github.com/mavroudisv/plain-academic" target="_blank">Design courtesy of Vasilios Mavroudis&emsp;</a><br>
     
 </body>
 
