--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- /.container -->
     
     <!-- Other people may like it too! -->
-    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Site based on design by Vasilios Mavroudis
+    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Design courtesy of Vasilios Mavroudis
  </a> 
     
 </body>
