--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a style="color:#e01709" href="teaching">Teaching</a></li>  
-                <li><a href="misc">Non-econ miscellanea</a></li> 
+                <li><a href="misc.html">Non-econ miscellanea</a></li> 
             </ul>
         </div>
     </nav>
