--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
             <!-- Entries Column -->
             <!-- <div class="col-md-8" style="height: 100vh; font-size:80%; text-align:center;> -->
-            <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:60%; display:block;">
+            <div class="col-md-8" style="height: 100vh; height: auto; text-align:justify; line-height:10px; font-size:65%; display:block;">
                 
                 <!-- Main Image -->
                 <img align="middle"; style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto"; class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
 		   <figcaption style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto">Photo by Henry Teng</figcaption><br>
 	
-		<div style="margin-top:3%; text-align:justify;">                
+		<div style="margin-top:3%; text-align:justify; font-size:90%;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
 					My research mainly deals with tax avoidance/evasion and inequality, but my interests extend more broadly to applying quantitative and social scientific methods to questions dealing with issues of social justice. <br/> 
