--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img align="middle"; style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto"; class="img-responsive"; src="files/brounstein_headshot_square.png" alt="Jakob Brounstein headshot">
 		   <figcaption style="display:block; height: 65%; width: 65%; margin-left: auto; margin-right: auto">Photo by Henry Teng</figcaption><br>
 	
-		<div style="margin-top:3%; text-align:justify; width = 110%;">                
+		<div style="margin-top:3%; text-align:justify; width = 110%;font-size:40%;">                
 			<p>
 				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
 					My research mainly deals with tax avoidance/evasion and inequality, but my interests extend more broadly to applying quantitative and social scientific methods to questions pertaining to issues of social justice. <br/> 
