--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	
 		<div style="margin-top:3%; text-align:justify;">                
 			<p>
-				<h4> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the UC Berkeley Department of Economics studying public and labor economics.  
+				<h4 style="font=size:90%;"> Hi, I'm Jakob Brounstein. I'm a PhD Candidate at the Department of Economics at UC Berkeley studying public and labor economics.  
 					My research mainly deals with tax avoidance/evasion and inequality, but my interests extend more broadly to applying quantitative and social scientific methods to questions pertaining to issues of social justice. <br/> 
 					<br>
 					Prior to my studies at Berkeley, I lived in Manhattan and Reims, France, where I finished my undergraduate degrees. <br/>
