--- a/misc.html
+++ b/misc.html
@@ -50,10 +50,10 @@
                 <strong>Select jazz composition charts </strong><br/>
                 <ul>
                 <li class="paper">
-                    Envelope. 2021. [<a href="/files/music/Envelope.pdf" target="_blank">Lead sheet</a>]
+                    Envelope. 2021. [<a href="/files/music/Envelope.pdf" target="_blank">Lead sheet</a>] [<a href="/files/music/brounstein_envelope_midi.wav" target="_blank">Midi recording</a>]
                 </li>
                 <li class="paper">
-                    Alone in a breeze. 2020. [<a href="/files/music/brounstein_aloneinabreeze.pdf" target="_blank">Lead sheet</a>]
+                    Alone in a breeze. 2020. [<a href="/files/music/brounstein_aloneinabreeze.pdf" target="_blank">Lead sheet</a>][<a href="/files/music/brounstein_aloneinabreeze_midi.wav" target="_blank">Midi recording</a>]
                 </li>
                 <li class="paper">
                     Light gray. 2019. [<a href="/files/music/light_gray.pdf" target="_blank">Lead sheet</a>]
