--- a/research.html
+++ b/research.html
@@ -80,7 +80,7 @@
                 </li>
 		<br>	
                 <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
-                    <strong>Brounstein, J.</strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data
+                    <strong>Brounstein, J.</strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">UNU WIDER Working Paper</a>]
                 </li>
 		<br>	
                 <li class="paper" words="Tax havens, tax evasion, tax avoidance, tax elusion, multinational taxation, public economics">
