--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@
                 </li>
 		<br>
 		<li class="paper" words="Estate taxation, tax avoidance, charitable giving">
-                    <strong>Brounstein, J.</strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
+                    <strong>Brounstein, J.</strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data. [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
                 </li>
 		<br>
                 </ul>
