--- a/teaching.html
+++ b/teaching.html
@@ -77,8 +77,8 @@
 		    </h5>
 		    
 	    	    <h6>
-			    Wednesday 10-11am, Location TBD <br>
-			    Friday 11am-12pm, Location TBD <br>
+			    Wednesday 10-11am, <a href= "https://berkeley.zoom.us/j/95909584748?pwd=eW5sOHF2eFpXTU5ycFZ5STBOVDg4UT09"> [Zoom] </a><br>
+			    Friday 11am-12pm, <a href= "https://berkeley.zoom.us/j/95909584748?pwd=eW5sOHF2eFpXTU5ycFZ5STBOVDg4UT09"> [Zoom] </a><br>
 			    
 		    </h6>
 	    </p>	
