--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
-                <dd><a href="/files/brounstein_cv_november2021.pdf">CV (updated fall 2021)</a></dd>
+                <dd><a href="/files/brounstein_cv_january2022.pdf">CV (updated December 2021)</a></dd>
 		<br>
 		<dd><a href="https://twitter.com/jakobbrounstein">Twitter</a></dd>
 		 
