--- a/teaching.html
+++ b/teaching.html
@@ -64,9 +64,9 @@
 		    </h5>
 		    
 	    	    <h6>
-			    Wednesday 9-10am, Evans 75, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] <br>
-			    Thursday 10-11am, Latimer 105, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] <br>
-			    Friday 10-11am, Mulford 240, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] <br>			    
+			    Wednesday 9-10am, Evans 75, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] </a><br>
+			    Thursday 10-11am, Latimer 105, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] </a><br>
+			    Friday 10-11am, Mulford 240, <a href="https://berkeley.zoom.us/j/94810732921?pwd=MjVIVDFaTi9lR2kxeHRNOU1UWUJXZz09"> [Zoom] </a><br>			    
 			    
 		    </h6>
 	    </p>	
