--- a/teaching.html
+++ b/teaching.html
@@ -85,11 +85,13 @@
 	
 	    
 	    <h3 id="teaching">Weekly discussion posts</h3>
-	   <!--
+
 		
- 		<blockquote class="twitter-tweet"><p lang="es" dir="ltr">Me sumo a la recomendación! Llevo varios capítulos, entre ellos los de <a href="https://twitter.com/lambeth_george?ref_src=twsrc%5Etfw">@lambeth_george</a>, <a href="https://twitter.com/dvergarad?ref_src=twsrc%5Etfw">@dvergarad</a>, <a href="https://twitter.com/fjmenese?ref_src=twsrc%5Etfw">@fjmenese</a>, <a href="https://twitter.com/valentiandrade?ref_src=twsrc%5Etfw">@valentiandrade</a>, y todos muy interesantes! Gran labor de <a href="https://twitter.com/cristobalotero?ref_src=twsrc%5Etfw">@cristobalotero</a> y Atria! <a href="https://t.co/VAtZTunlqC">https://t.co/VAtZTunlqC</a></p>&mdash; Felipe Vial (he/él) (@pipevial) <a href="https://twitter.com/pipevial/status/1475598561438011395?ref_src=twsrc%5Etfw">December 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	 
+ 		Twitter/ PublishCurate a story with TwitterCurate a storyWhat would you like to embed?Enter a Twitter URLGet WidgetSomething's Not RightSorry, we couldn't understand that query. Please try again.ClosePreviewCloseSelect the button you'd like to useShare ButtonQuickly and easily Tweet a link.Follow ButtonGet updates from someone on Twitter.Mention ButtonStart a conversation, right from your website.Hashtag ButtonJoin the global discussion on Twitter.Message ButtonMessage privately with anyone on Twitter.CloseThat’s all we need, unless you’d like to set customization options.By embedding Twitter content in your website or app, you are agreeing to the Developer Agreement and Developer Policy.<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Inaugural discussion article for <a href="https://twitter.com/hashtag/econ133?src=hash&amp;ref_src=twsrc%5Etfw">#econ133</a>: the first lecture introduced macroeconomic income accounting concepts---but are we talking about the right ones and are our measures doing what we want them to do?Similarly important for thinking about inequality<a href="https://t.co/M5Pg4GxGWh">https://t.co/M5Pg4GxGWh</a></p>&mdash; Jakob Brounstein (@jakobbrounstein) <a href="https://twitter.com/jakobbrounstein/status/1484610378621353984?ref_src=twsrc%5Etfw">January 21, 2022</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+Copy CodeCopied!Paste this code directly into the HTML portion of your site, and you'll be good to go. Need more info? Check out our developer docs.Close
 		
-	    -->
+
             </div>
 		
            <!-- Links on the Sidebar -->
