--- a/teaching.html
+++ b/teaching.html
@@ -46,11 +46,6 @@
             <!-- Publications -->
             <div class="col-md-8" style="min-height: 100vh; height: auto;">    
                 <h2 id="teaching">Econ 133: Global Inequality and Growth</h2>
-            <p>
-                    <h5>
-			    Ahoy! I'll be populating this space with materials for Econ 133: Global Inequality and Growth for the spring 2022 semester. See you there!
-		    </h5>	   
-	    </p>
 		
 	    <p>
                     <h6>
@@ -87,7 +82,7 @@
 	    <h3 id="teaching">Weekly discussion posts</h3>
 
 		
- 		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Inaugural discussion article for <a href="https://twitter.com/hashtag/econ133?src=hash&amp;ref_src=twsrc%5Etfw">#econ133</a>: the first lecture introduced macroeconomic income accounting concepts---but are we talking about the right ones and are our measures doing what we want them to do?Similarly important for thinking about inequality<a href="https://t.co/M5Pg4GxGWh">https://t.co/M5Pg4GxGWh</a></p>&mdash; Jakob Brounstein (@jakobbrounstein) <a href="https://twitter.com/jakobbrounstein/status/1484610378621353984?ref_src=twsrc%5Etfw">January 21, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+ 		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/Econ133?src=hash&amp;ref_src=twsrc%5Etfw">#Econ133</a>, we introduced the concept of national wealth and discussed a theory of long-run wealth-to-inc ratio. Coyle argues that national wealth could be a better indicator than GDP of macro well-being, but what info does each measure really give us?<a href="https://t.co/xoQm7VyipG">https://t.co/xoQm7VyipG</a></p>&mdash; Jakob Brounstein (@jakobbrounstein) <a href="https://twitter.com/jakobbrounstein/status/1487166532383744001?ref_src=twsrc%5Etfw">January 28, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
 
             </div>
