--- a/teaching.html
+++ b/teaching.html
@@ -83,7 +83,7 @@
 
 		
  		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/Econ133?src=hash&amp;ref_src=twsrc%5Etfw">#Econ133</a>, we introduced the concept of national wealth and discussed a theory of long-run wealth-to-inc ratio. Coyle argues that national wealth could be a better indicator than GDP of macro well-being, but what info does each measure really give us?<a href="https://t.co/xoQm7VyipG">https://t.co/xoQm7VyipG</a></p>&mdash; Jakob Brounstein (@jakobbrounstein) <a href="https://twitter.com/jakobbrounstein/status/1487166532383744001?ref_src=twsrc%5Etfw">January 28, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		
+		<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Econ133?src=hash&amp;ref_src=twsrc%5Etfw">#Econ133</a> Race and the lack of intergenerational economic mobility in the United States - Equitable Growth <a href="https://t.co/FBhDxSyqq9">https://t.co/FBhDxSyqq9</a> via <a href="https://twitter.com/equitablegrowth?ref_src=twsrc%5Etfw">@equitablegrowth</a></p>&mdash; Diego Villegas (@Diego_VillegasA) <a href="https://twitter.com/Diego_VillegasA/status/1488264677662412801?ref_src=twsrc%5Etfw">January 31, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
             </div>
 		
