--- a/teaching.html
+++ b/teaching.html
@@ -72,61 +72,52 @@
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section3_gini_inequality.pdf"> Section 3: The Gini coefficient </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section4_incomeshares.pdf"> Section 4: Income shares and other measures of inequality </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section5_inflation.pdf"> Section 5: The distributional incidence of inflation </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section8_laborearningsinequality.pdf"> Section 8: Models of labor income inequality </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section9_wealthresearchmethods.pdf"> Section 9: Wealth inference and research methods </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section10_wealthdistributionmodels.pdf"> Section 10: Models of the wealth distribution </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section11_inheritedwealth.pdf"> Section 11: Inherited vs. self-made wealth </a><br>
 		</h5>	
 	    </p>     
 		
             <p>	
 		<h5>
-			    <a href= "/files/econ133/econ133_notes_section1_introduction"> Section 1: Income concepts </a><br>
+			    <a href= "/files/econ133/econ133_notes_section12_optimaltax.pdf"> Section 12: Optimal taxation </a><br>
 		</h5>	
 	    </p>     
 	   				
-	    
-	    <h3 id="teaching">Weekly discussion posts</h3>
-
-		
-		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The new beginnings of wealth taxation in the US?<a href="https://twitter.com/hashtag/econ133?src=hash&amp;ref_src=twsrc%5Etfw">#econ133</a><a href="https://t.co/9aZjyhVNRf">https://t.co/9aZjyhVNRf</a></p>&mdash; Jakob Brounstein (@jakobbrounstein) <a href="https://twitter.com/jakobbrounstein/status/1513046670891659266?ref_src=twsrc%5Etfw">April 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Econ133?src=hash&amp;ref_src=twsrc%5Etfw">#Econ133</a><br>Subminimal Wage and its intersectional effects.<a href="https://t.co/JAc3J7H7y5">https://t.co/JAc3J7H7y5</a><a href="https://twitter.com/onefairwage?ref_src=twsrc%5Etfw">@onefairwage</a> <a href="https://twitter.com/SaruJayaraman?ref_src=twsrc%5Etfw">@SaruJayaraman</a></p>&mdash; Diego Villegas (@Diego_VillegasA) <a href="https://twitter.com/Diego_VillegasA/status/1502067351180689408?ref_src=twsrc%5Etfw">March 10, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-            </div>
-		
            <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
