--- a/teaching.html
+++ b/teaching.html
@@ -88,6 +88,18 @@
 		</h5>	
 	    </p>     
 		
+	    <p>	
+		<h5>
+			    Section 6: Midterm prep (no notes)
+		</h5>	
+	    </p>     
+
+	    <p>	
+		<h5>
+			    Section 7: Midterm recap (no notes)
+		</h5>	
+	    </p>     
+
             <p>	
 		<h5>
 			    <a href= "/files/econ133/econ133_notes_section8_laborearningsinequality.pdf"> Section 8: Models of labor income inequality </a><br>
@@ -117,7 +129,13 @@
 			    <a href= "/files/econ133/econ133_notes_section12_optimaltax.pdf"> Section 12: Optimal taxation </a><br>
 		</h5>	
 	    </p>     
-	   	
+	   
+	    <p>	
+		<h5>
+			    Final exam review (no notes)
+		</h5>	
+	    </p>
+
 	</div>
 
            <!-- Links on the Sidebar -->
