--- a/teaching.html
+++ b/teaching.html
@@ -132,7 +132,7 @@
 	   
 	    <p>	
 		<h5>
-			    Final exam review (no notes)
+			    Section 13: Final exam review (no notes)
 		</h5>	
 	    </p>
 
