--- a/teaching.html
+++ b/teaching.html
@@ -96,7 +96,7 @@
 
 	    <p>	
 		<h5>
-			    Section 7: Midterm recap (no notes)
+			    Section 7: Midterm re-cap (no notes)
 		</h5>	
 	    </p>     
 
