--- a/research.html
+++ b/research.html
@@ -80,10 +80,13 @@
                     <strong> Public investment in the arts and cultural agglomeration: Evidence from the New Deal </strong> [<a href="/files/brounstein_returnarts_202110_wp.pdf" target="_blank">Paper</a>]
                 </li>
 		<br>
-		<li class="paper" words="Estate taxation, tax avoidance, charitable giving">
+		<li class="paper" words="Tax havens, tax evasion, tax avoidance, tax elusion, multinational taxation, public economics">
                     <strong> The tax-price elasticity of offshore tax elusion: evidence from Ecuadorian transaction data </strong> [<a href="/files/brounstein_taxelusionecuador_unuwider_202112.pdf" target="_blank">Paper</a>]
                 </li>
 		<br>
+                <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
+                    <strong> Estate tax avoidance through charitable giving </strong> [<a href="/files/brounstein_estatetaxavoidancecharitablegiving_202206_wp.pdf" target="_blank">Paper</a>]
+                </li>
                 </ul>
               
                  <br><br>
@@ -92,10 +95,6 @@
                 <ul>
                 <li class="paper" words="Pink tax, Gender inequality, Gender wage gap">
                     <strong> The Pink Tax: Gender Inequalities in Consumption and the Real Wage Gap </strong> (with Barnes, K.)
-                </li>
-		<br>		
-                <li class="paper" words="Tax havens, tax evasion, tax avoidance, tax elusion, multinational taxation, public economics">
-                    <strong> Estate tax avoidance through charitable giving </strong> 
                 </li>
                 </ul>
               
