--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
                 </li>
 		<br>
                 <li class="paper" words="Estate taxation, tax avoidance, charitable giving">
-                    <strong> Estate tax avoidance through charitable giving </strong> [<a href="/files/brounstein_estatetaxavoidancecharitablegiving_202206_wp.pdf" target="_blank">Paper</a>]
+                    <strong> Estate tax avoidance and private benefit through charitable giving </strong> [<a href="/files/brounstein_estatetaxavoidancecharitablegiving_202206_wp.pdf" target="_blank">Paper</a>]
                 </li>
                 </ul>
               
