--- a/research.html
+++ b/research.html
@@ -98,7 +98,7 @@
                 </li>
 		<br>
 		    <li class="paper" words="Homelessness, Housing, Public programs, Fiscality">
-                    <strong> The fiscality of homelessness housing policies </strong> (with Wieselthier, J.) [Draft soon]
+                    <strong> The fiscality of housing the homeless </strong> (with Wieselthier, J.) [Draft soon]
                 </li>	
                 </ul>
                  <br><br>
