--- a/teaching.html
+++ b/teaching.html
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            <!-- Links on the Sidebar -->
             <div class="col-md-4" style="margin-top:2%">
               <!-- <dd><a href="#">Google Scholar</a></dd> -->
-                <dd><a href="/files/brounstein_cv_mostrecent.pdf" target="_blank" title="Brounstein CV">CV (updated July 2022)</a></dd>
+                <dd><a href="/files/brounstein_cv_mostrecent.pdf" target="_blank" title="Brounstein CV">CV</a></dd>
                 <br>
                 <dd><a href="https://twitter.com/jakobbrounstein" target="_blank">Twitter</a></dd>
 		 
